<resources>
    <string name="app_name">Contacts</string>
    <string name="save_button_content_description">Save contact changes</string>
    <string name="contact_first_name_hint">First name</string>
    <string name="contact_last_name_hint">Last name</string>
    <string name="contact_phone_hint">Phone</string>
    <string name="contact_image">Contact image</string>
    <string name="search_hint">Search</string>
    <string name="search_image_content_description">Search icon</string>
    <string name="search_clear_content_description">Clear search text</string>
    <string name="remove_contact_title">Remove contact</string>
    <string name="remove_contact_message">Do you really want to delete this contact?</string>
    <string name="remove_contact_yes">Yes</string>
    <string name="remove_contact_no">No</string>
</resources>